fix(game): pin to Java 21 and enable SecurityManager so the module sandbox actually works
Terasology's module sandbox (ModuleManager.setupSandbox()) installs a
SecurityManager to keep third-party gameplay modules from doing arbitrary
file/network/process/reflection access. That capability was deprecated
starting with JDK 18 (opt-in only via -Djava.security.manager=allow) and
removed entirely as of JDK 24 (JEP 486) - see terasology#5357 for the full
writeup of what's exposed without it.

This launcher was bundling JDK 25, which meant the sandbox couldn't be
enabled by any means - System.setSecurityManager() just throws
UnsupportedOperationException unconditionally on 24+. Every module, from
every server a player joins, has been running with full, unrestricted JVM
access with no way to turn that off.

Fixed by pinning both the launcher's own compile target and the JRE it
bundles for the game to Java 21 - the last LTS where SecurityManager still
works normally with the opt-in flag, same enforcement engine as pre-18,
nothing degraded. Changes:

- build.gradle.kts / push-validation.yml: launcher's sourceCompatibility
  and CI's JDK both dropped from 25 to 21.
- jre.gradle.kts: bundled JRE (all 6 platform/arch targets) is now
  Bellsoft Liberica 21.0.12+10 instead of 25+37.
- GameStarter.java: the game process now launches with
  -Djava.security.manager=allow, so ModuleManager's existing (and
  otherwise unused) opt-in check actually takes the enforcing branch.
- Reverted the handful of `var _ = ...` (JEP 456 unnamed variables) added
  earlier in this branch back to `var unused = ...` - that syntax needs
  source level 22+, not available at 21.

Verified end-to-end: built the mac distribution with the new Java 21 JRE,
ran a real game session, and confirmed in the game's own log output that
System.setSecurityManager() is now actually being called and succeeding
(the JDK's own deprecation-warning line "System::setSecurityManager has
been called by org.terasology.engine.core